--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,22 +1,30 @@
 @import "../omarchy/current/theme/waybar.css";
 
 * {
-  background-color: @background;
+  /* background-color: @background; */
   color: @foreground;
-
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: 'CaskaydiaMono Nerd Font';
+  font-family: CaskaydiaMono Nerd Font;
   font-size: 12px;
 }
 
-.modules-left {
-  margin-left: 8px;
+window#waybar {
+  background: transparent;
+  margin-top: 10px;
 }
 
-.modules-right {
-  margin-right: 8px;
+window#waybar.empty #window {
+  background: transparent;
+  color: transparent;
+  padding: 0;
+  margin-left: 5;
+  transition: 0.5s;
+}
+
+mpris.empty {
+  background: transparent;
 }
 
 #workspaces button {
@@ -30,30 +38,28 @@
   opacity: 0.5;
 }
 
+#memory,
+#mpris,
+#window,
+#tray,
 #cpu,
 #battery,
+#network,
+#bluetooth,
 #pulseaudio,
 #custom-omarchy,
 #custom-screenrecording-indicator,
 #custom-update {
+  background-color: @background;
   min-width: 12px;
-  margin: 0 7.5px;
-}
 
-#tray {
-  margin-right: 16px;
-}
-
-#bluetooth {
-  margin-right: 17px;
-}
-
-#network {
-  margin-right: 13px;
+  border-radius: 10px;
+  padding: 0 10px;
+  margin: 0 0 0 5;
 }
 
 #custom-expand-icon {
-  margin-right: 20px;
+  margin-right: 12px;
 }
 
 tooltip {
@@ -65,7 +71,10 @@ tooltip {
 }
 
 #clock {
-  margin-left: 8.75px;
+  background-color: @background;
+
+  border-radius: 10px;
+  padding: 0 10 0 10;
 }
 
 .hidden {
@@ -76,19 +85,66 @@ tooltip {
   min-width: 12px;
   margin-left: 8.75px;
   font-size: 10px;
+
+  padding: 0 11 0 10;
 }
 
 #custom-screenrecording-indicator.active {
   color: #a55555;
 }
 
-#battery.warning { color: #f1c40f; }
-#battery.critical { color: #e74c3c; }
-#battery.charging { color: #2ecc71; }
-#battery.full { color: #00bfff; }
+/* EXTRA FIX! */
+#workspaces {
+  background-color: @background;
+  border-radius: 10px;
+  margin-left: 5px;
+  padding: 0 5 0 5;
+}
+#tray-expander {
+  background-color: @background;
+  border-radius: 10px;
+  padding: 0 0 0 10;
+}
+#pulseaudio {
+  padding: 0 15 0 10;
+}
+#tray {
+  margin: 0;
+}
+#mpris {
+  margin-right: 5px;
+}
+#network.icon {
+  padding: 0 13 0 9;
+}
 
-#memory.warning { color: #f1c40f; }
-#memory.critical { color: #e74c3c; }
+tooltip {
+  border-radius: 10px;
+}
 
-#cpu.warning { color: #f1c40f; }
-#cpu.critical { color: #e74c3c; }
+#battery.warning {
+  color: #f1c40f;
+}
+#battery.critical {
+  color: #e74c3c;
+}
+#battery.charging {
+  color: #2ecc71;
+}
+#battery.full {
+  color: #00bfff;
+}
+
+#memory.warning {
+  color: #f1c40f;
+}
+#memory.critical {
+  color: #e74c3c;
+}
+
+#cpu.warning {
+  color: #f1c40f;
+}
+#cpu.critical {
+  color: #e74c3c;
+}
